Bug 121949 - Crash in: libsclo.so Copy block of cells to clipboard with focus on non-selected cell
Summary: Crash in: libsclo.so Copy block of cells to clipboard with focus on non-selec...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.beta1+
Hardware: All All
: highest critical
Assignee: Luboš Luňák
URL:
Whiteboard: target:6.3.0 target:6.2.2 target:6.4.0
Keywords: bibisected, bisected, regression
: 122550 122821 123708 124144 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-12-06 21:10 UTC by Drew Jensen
Modified: 2024-04-18 03:42 UTC (History)
7 users (show)

See Also:
Crash report or crash signature: ["ScPoolHelper::GetFormTable()"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-12-06 21:10:07 UTC
This bug was filed from the crash reporting server and is br-99d77fb0-eb01-40e7-9665-86747130b81a.
=========================================

Using Ubuntu 18.04 was not able to reproduce this with LO6.1.
Using 6.2Beta1 (12/01/18 build)crash is consistent.

To reproduce:

1 Create a new (or open existing) calc file
2 Select a block of cells with the mouse (3x3 sufficient)
3 Deselect one of the cells form inside the block
4 Copy the cells to the clipboard (context menu, keyboard shortcut, is same)
crash

buovjaga on the IRC channel was able to recreate on his windows machine so setting this to new.
Comment 1 Drew Jensen 2018-12-06 21:11:04 UTC
buovjaga on the IRC channel was able to recreate on his windows machine so setting this to new, and I don't see anything similar with a search so setting this to new.
Comment 2 Drew Jensen 2018-12-06 21:58:54 UTC
OK so running bibisect it finds the anomaly arrived with commit 79449d73900d7a9bf061244d76f5f8eecc441198
"make VLOOKUP in Calc thread-safe"

author	Luboš Luňák <l.lunak@collabora.com>	2018-10-01 14:26:57 +0200

add author to CC list
Comment 3 Xisco Faulí 2018-12-07 23:08:33 UTC
I do confirm it was introduced by 79449d73900d7a9bf061244d76f5f8eecc441198
Comment 4 Xisco Faulí 2018-12-20 11:48:09 UTC
Increasing severity since LibreOffice 6.2 reached the first RC
Comment 5 Xisco Faulí 2019-01-07 22:29:23 UTC
*** Bug 122550 has been marked as a duplicate of this bug. ***
Comment 6 Michael Meeks 2019-01-15 11:24:38 UTC
Almost certainly a dup of bug#122643
Comment 7 Luboš Luňák 2019-02-25 14:56:44 UTC
https://gerrit.libreoffice.org/68350
Comment 8 justus.croskery 2019-02-26 15:21:20 UTC
*** Bug 123708 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2019-03-01 09:03:35 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/b5c3f38cb8d4121e3303be362e0757d3d3431059%5E%21

do not call GetFormatTable() from GetNonThreadedContext() (tdf#121949)

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2019-03-04 14:24:15 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/233c9a12fd578e9a518cf6841d186f2f884d594d%5E%21

do not call GetFormatTable() from GetNonThreadedContext() (tdf#121949)

It will be available in 6.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2019-03-12 17:03:42 UTC
*** Bug 122821 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2019-03-12 17:10:19 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 8aa579830b20072af8d6e149d6b279362fe98b91
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Luboš Luňák, thanks for fixing this issue!
Comment 13 raal 2019-03-18 18:48:32 UTC
*** Bug 124144 has been marked as a duplicate of this bug. ***
Comment 14 Commit Notification 2019-07-26 09:25:29 UTC
Artur Neumann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/36088d528a3df82b3fcdf9a8685e53ba2f1cbd16%5E%21

UI test for #tdf121949

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 artur 2019-07-26 09:26:06 UTC
UI tests added in https://gerrit.libreoffice.org/#/c/76348/
deleted 'needUITest' keyword