sc/inc/document.hxx
@@ -587,8 +587,7 @@ public:
 
     ScInterpreterContext& GetNonThreadedContext() const
     {
-        // GetFormatTable() asserts that we are not in a threaded calculation
-        maInterpreterContext.mpFormatter = GetFormatTable();
+        assert(!IsThreadedGroupCalcInProgress());
         return maInterpreterContext;
     }
     // Uses thread_local.
